2009-11-09  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Allow setting HTTP headers with empty value in XMLHTTPRequest
        https://bugs.webkit.org/show_bug.cgi?id=31140

        QtNetwork interprets null string as request to remove the header, not add it.
        Replace null values with empty values before passing them to QtNetwork.

        Test: http/tests/xmlhttprequest/xmlhttprequest-setrequestheader-no-value.html

        * platform/network/qt/ResourceRequestQt.cpp:
        (WebCore::ResourceRequest::toNetworkRequest):

2009-11-09  Vadim Zeitlin  <vadim@wxwidgets.org>

        Reviewed by Kevin Ollivier.

        [wx] Fix handling of alpha channel when using wxWidgets 2.9: it was
        simply ignored before resulting in transparent areas being black in PNG
        images for example.
        
        https://bugs.webkit.org/show_bug.cgi?id=30823

        * platform/image-decoders/wx/ImageDecoderWx.cpp:
        (WebCore::RGBA32Buffer::asNewNativeImage):

2009-11-09  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Use explicit parentheses to silence gcc 4.4 -Wparentheses warnings
        https://bugs.webkit.org/show_bug.cgi?id=31040

        No new tests as there is no functional change.

        * dom/Document.cpp:
        (WebCore::Document::recalcStyleSelector):
        * editing/TextIterator.cpp:
        (WebCore::pushFullyClippedState):
        * editing/VisibleSelection.cpp:
        (WebCore::VisibleSelection::appendTrailingWhitespace):
        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::process):
        * loader/RedirectScheduler.cpp:
        (WebCore::RedirectScheduler::mustLockBackForwardList):
        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::didFinishLoadingManifest):
        * platform/graphics/qt/FontCacheQt.cpp:
        (WebCore::FontPlatformDataCacheKey::computeHash):