@@ -41,6 +41,7 @@ public:
         , page(0)
     {}
 
+    virtual ~QGraphicsWebViewPrivate();
     virtual void scroll(int dx, int dy, const QRect&);
     virtual void update(const QRect& dirtyRect);
     virtual void setInputMethodEnabled(bool enable);
@@ -64,6 +65,10 @@ public:
     QGraphicsWebView* q;
     QWebPage* page;
 };
+
+QGraphicsWebViewPrivate::~QGraphicsWebViewPrivate()
+{
+}
 
 void QGraphicsWebViewPrivate::_q_doLoadFinished(bool success)
 {
